--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div>
     <%= form.label :content, style: "display: block" %>
-    <%= form.text_field :content %>
+    <%= form.text_area :content, cols: 80, rows: 30 %>
   </div>
 
   <div>
