--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,10 +1,26 @@
-<p style="color: green"><%= notice %></p>
+<% title(@post.title) %>
 
-<%= render @post %>
+<article class="blog-post px-3 py-5 p-md-5">
+  <div class="container single-col-max-width">
+    <header class="blog-post-header">
+      <h2 class="title mb-2"><%= @post.title %></h2>
+      <div class="meta mb-3">
+        <span class="date"><%= t(:published_at) %> <%= time_ago_in_words(@post.created_at) %></span>
+        <span class="time"><%= @post.content.size / 200 %> min read</span>
+        <span class="comment"><a class="text-link" href="#">4 comments</a></span>
+        <span><a class="text-link" href="<%= url_for(action: :edit) %>">Edit (only you can)</a></span>
+      </div>
+    </header>
 
-<div>
-  <%= link_to "Edit this post", edit_post_path(@post) %> |
-  <%= link_to "Back to posts", posts_path %>
+    <div class="blog-post-body">
+      <%= raw markdown_text(@post.content) %>
+    </div>
 
-  <%= button_to "Destroy this post", @post, method: :delete %>
-</div>
+    <nav class="blog-nav nav nav-justified my-5">
+      <a class="nav-link-prev nav-item nav-link rounded-left" href="#">Previous<i class="arrow-prev fas fa-long-arrow-alt-left"></i></a>
+      <a class="nav-link-next nav-item nav-link rounded-right" href="#">Next<i class="arrow-next fas fa-long-arrow-alt-right"></i></a>
+    </nav>
+  </div>
+</article>
+
+<%= javascript_include_tag "pages/post_show" %>
