Extracted the `shared/_email_subscription.html.erb` to also reuse it in `/about` page.

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,20 +1,10 @@
 <% content_for :title, "Posts" %>
 
-<section class="cta-section theme-bg-light py-5">
+<section class="theme-bg-light py-5">
   <div class="container text-center single-col-max-width">
     <h2 class="heading"><%= t(:headline) %></h2>
-    <div class="intro"><%= t(:subscribe_to_receive_email) %></div>
-    <div class="single-form-max-width pt-3 mx-auto">
-      <form class="signup-form row g-2 g-lg-2 align-items-center">
-        <div class="col-12 col-md-9">
-          <input type="email" name="semail" class="form-control me-md-1 semail" placeholder="Enter email">
-        </div>
 
-        <div class="col-12 col-md-2">
-          <button type="submit" class="btn btn-primary"><%= t(:subscribe) %></button>
-        </div>
-      </form>
-    </div>
+    <%= render 'shared/email_subscription' %>
   </div>
 </section>
 
