--- a/app/views/posts/about.html.erb
+++ b/app/views/posts/about.html.erb
@@ -16,4 +16,10 @@
   </div>
 </article>
 
-<%= javascript_include_tag "pages/post_show" %>
+<section class="theme-bg-light py-5">
+  <div class="container text-center single-col-max-width">
+    <%= render 'shared/email_subscription' %>
+
+    <%= javascript_include_tag "pages/post_show" %>
+  </div>
+</section>
