--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,5 +1,7 @@
 <% content_for :title, "Editing post" %>
 
+<p style="color: green"><%= notice %></p>
+
 <h1>Editing post</h1>
 
 <%= render "form", post: @post %>
@@ -7,6 +9,6 @@
 <br>
 
 <div>
-  <%= link_to "Show this post", @post %> |
+  <%= link_to "Show this post", @post.path %> |
   <%= link_to "Back to posts", posts_path %>
 </div>
