--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,9 @@
 <% content_for :title, "Posts" %>
 
+<% if notice.present? %>
+  <p style="color: green"><%= notice %></p>
+<% end %>
+
 <section class="theme-bg-light py-5">
   <div class="container text-center single-col-max-width">
     <h2 class="heading"><%= t(:headline) %></h2>
@@ -10,7 +14,6 @@
 
 <section class="blog-list px-3 py-5 p-md-5">
   <div class="container single-col-max-width">
-
     <% @posts.each_with_index do |post, i| %>
       <div class="item mb-5">
         <div class="row g-3 g-xl-0">
@@ -19,7 +22,7 @@
           </div>
 
           <div class="col">
-            <h3 class="title mb-1"><a class="text-link" href="<%= post_path(post) %>"><%= post.title %></a></h3>
+            <h3 class="title mb-1"><a class="text-link" href="<%= post.path %>"><%= post.title %></a></h3>
             <div class="meta mb-1">
               <span class="date"><%= t(:posted_at) %> <%= time_ago_in_words(post.created_at) %></span>
               <span class="time"><%= post.content.size / 200 %> min read</span>
@@ -28,15 +31,22 @@
               </span>
             </div>
             <div class="intro"><%= post.content[..250] %>...</div>
-            <a class="text-link" href="<%= post_path(post) %>">Read more &rarr;</a>
+            <a class="text-link" href="<%= post.path %>">Read more &rarr;</a>
           </div>
         </div>
       </div>
-
     <% end %>
 
     <nav class="blog-nav nav nav-justified my-5">
       <a class="nav-link-next nav-item nav-link rounded" href="<%= about_path %>">Next<i class="arrow-next fas fa-long-arrow-alt-right"></i></a>
     </nav>
+
+    <% if authenticated? %>
+      <div>
+        <a href="<%= new_post_path %>">
+          <button type="button" class="btn btn-primary">Create a Post</button>
+        </a>
+      </div>
+    <% end %>
   </div>
 </section>
