--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,7 +2,38 @@
 
 <h1>New post</h1>
 
-<%= render "form", post: @post %>
+<%= form_with(model: @post) do |form| %>
+  <% if @post.errors.any? %>
+    <div style="color: red">
+      <h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
+
+      <ul>
+        <% @post.errors.each do |error| %>
+          <li><%= error.full_message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div>
+    <%= form.label :permalink, style: "display: block" %>
+    <%= form.text_field :permalink %>
+  </div>
+
+  <div>
+    <%= form.label :title, style: "display: block" %>
+    <%= form.text_field :title %>
+  </div>
+
+  <div>
+    <%= form.label :content, style: "display: block" %>
+    <%= form.text_area :content, cols: 80, rows: 30 %>
+  </div>
+
+  <div>
+    <%= form.submit %>
+  </div>
+<% end %>
 
 <br>
 
