--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,7 +8,7 @@
         <span class="date"><%= t(:posted_at) %> <%= time_ago_in_words(@post.created_at) %></span>
         <span class="time"><%= @post.content.size / 200 %> min read</span>
         <span class="comment"><a class="text-link" href="#">4 comments</a></span>
-        <span><a class="text-link" href="<%= url_for(action: :edit) %>">Edit (only you can)</a></span>
+        <span><a class="text-link" href="<%= edit_post_path(@post) %>">Edit (only you can)</a></span>
       </div>
     </header>
 
@@ -17,8 +17,16 @@
     </div>
 
     <nav class="blog-nav nav nav-justified my-5">
-      <a class="nav-link-prev nav-item nav-link rounded-left" href="#">Previous<i class="arrow-prev fas fa-long-arrow-alt-left"></i></a>
-      <a class="nav-link-next nav-item nav-link rounded-right" href="#">Next<i class="arrow-next fas fa-long-arrow-alt-right"></i></a>
+      <% if @post_newer.present? %>
+        <a class="nav-link-prev nav-item nav-link rounded-left" href="<%= @post_newer.path %>">
+          Newer<i class="arrow-prev fas fa-long-arrow-alt-left"></i>
+        </a>
+      <% end %>
+      <% if @post_older.present? %>
+        <a class="nav-link-next nav-item nav-link rounded-right" href="<%= @post_older.path %>">
+          Older<i class="arrow-next fas fa-long-arrow-alt-right"></i>
+        </a>
+      <% end %>
     </nav>
   </div>
 </article>
