Added `admin` namespace; Moved edit post features into `/admin` namespace.

--- a/app/views/admin/posts/new.html.erb
+++ b/app/views/admin/posts/new.html.erb
@@ -2,7 +2,7 @@
 
 <h1>New post</h1>
 
-<%= form_with(model: @post) do |form| %>
+<%= form_with(model: [:admin, @post]) do |form| %>
   <% if @post.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
@@ -38,5 +38,5 @@
 <br>
 
 <div>
-  <%= link_to "Back to posts", posts_path %>
+  <%= link_to "Back to posts", admin_posts_path %>
 </div>
