--- a/app/views/admin/posts/edit.html.erb
+++ b/app/views/admin/posts/edit.html.erb
@@ -10,5 +10,5 @@
 
 <div>
   <%= link_to "Show this post", @post.path %> |
-  <%= link_to "Back to posts", posts_path %>
+  <%= link_to "Back to posts", admin_posts_path %>
 </div>
