--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,10 +5,11 @@
     <header class="blog-post-header">
       <h2 class="title mb-2"><%= @post.title %></h2>
       <div class="meta mb-3">
+        <span><%= t(:author) %>: <%= t(:author_name) %></span>
         <span class="date"><%= t(:posted_at) %> <%= time_ago_in_words(@post.created_at) %></span>
         <span class="time"><%= @post.content.size / 200 %> min read</span>
         <span class="comment"><a class="text-link" href="#">4 comments</a></span>
-        <span><a class="text-link" href="<%= edit_post_path(@post) %>">Edit (only you can)</a></span>
+        <span><a class="text-link" href="<%= edit_admin_post_path(@post) %>">Edit (only you can)</a></span>
       </div>
     </header>
 
@@ -19,12 +20,12 @@
     <nav class="blog-nav nav nav-justified my-5">
       <% if @post_newer.present? %>
         <a class="nav-link-prev nav-item nav-link rounded-left" href="<%= @post_newer.path %>">
-          Newer<i class="arrow-prev fas fa-long-arrow-alt-left"></i>
+          Newer Post<i class="arrow-prev fas fa-long-arrow-alt-left"></i>
         </a>
       <% end %>
       <% if @post_older.present? %>
         <a class="nav-link-next nav-item nav-link rounded-right" href="<%= @post_older.path %>">
-          Older<i class="arrow-next fas fa-long-arrow-alt-right"></i>
+          Older Post<i class="arrow-next fas fa-long-arrow-alt-right"></i>
         </a>
       <% end %>
     </nav>
