--- a/app/views/admin/posts/edit.html.erb
+++ b/app/views/admin/posts/edit.html.erb
@@ -9,6 +9,5 @@
 <br>
 
 <div>
-  <%= link_to "Show this post", @post.path %> |
-  <%= link_to "Back to posts", admin_posts_path %>
+  <%= link_to "Show this post", @post.path %>
 </div>
