--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,7 +9,14 @@
         <span class="date"><%= t(:posted_at) %> <%= time_ago_in_words(@post.created_at) %></span>
         <span class="time"><%= @post.content.size / 200 %> min read</span>
         <span class="comment"><a class="text-link" href="#">4 comments</a></span>
-        <span><a class="text-link" href="<%= edit_admin_post_path(@post) %>">Edit (only you can)</a></span>
+        <% if authenticated? %>
+          <% if [ Category::ID_DRAFTS, Category::ID_PUBLISHED ].include?(@post.category_id) %>
+            <span>
+              <a class="text-link" href="<%= @post.category.path %>"><%= @post.category.name %></a>
+            </span>
+          <% end %>
+          <span><a class="text-link" href="<%= edit_admin_post_path(@post) %>">Edit</a></span>
+        <% end %>
       </div>
     </header>
 
