--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -26,6 +26,10 @@
     <%= stylesheet_link_tag "rouge-theme-molokai.css", "data-turbo-track": "reload" %>
     <%= stylesheet_link_tag "theme-1.css", "data-turbo-track": "reload" %>
 
+    <style>
+      label.required:after { content:"*" }
+    </style>
+
     <%= javascript_importmap_tags %>
   </head>
 
