--- a/app/views/admin/main/root.html.erb
+++ b/app/views/admin/main/root.html.erb
@@ -1,16 +1,22 @@
-<p>
-  Welcome, admin user!
-</p>
+<section class="px-3 py-5 p-md-5">
+  <div class="container single-col-max-width">
+    <p>
+      Welcome, admin user!
+    </p>
 
-<%= link_to "Categories", admin_categories_path %>
-<br>
-<%= link_to @category_drafts.name, @category_drafts.path %>&nbsp;&nbsp;
-<%= link_to @category_published.name, @category_published.path %>
+    <%= link_to "Categories", admin_categories_path %>
 
-<div>
-  <a href="<%= new_admin_post_path %>">
-    <button type="button" class="btn btn-primary">Create a Post</button>
-  </a>
-</div>
+    <div class="mt-3">
+      <%= link_to @category_drafts.name, @category_drafts.path, target: "_blank" %>&nbsp;&nbsp;
+      <%= link_to @category_published.name, @category_published.path, target: "_blank" %>
+    </div>
 
-<%= button_to "Log out", session_path, method: :delete, class: "btn btn-primary my-2" if authenticated? %>
+    <div class="mt-3">
+      <a href="<%= new_admin_post_path %>">
+        <button type="button" class="btn btn-primary">Create a Post</button>
+      </a>
+    </div>
+
+    <%= button_to "Log out", session_path, method: :delete, class: "btn btn-primary my-2" if authenticated? %>
+  </div>
+</section>
