Styled the `sign-in` and `password reset` pages.

--- a/app/views/passwords/new.html.erb
+++ b/app/views/passwords/new.html.erb
@@ -1,8 +1,20 @@
-<h1>Forgot your password?</h1>
+<% content_for :title, "Forgot your password?" %>
 
-<%= tag.div(flash[:alert], style: "color:red") if flash[:alert] %>
+<section class="px-3 py-5 p-md-5">
+  <div class="container single-col-max-width">
+    <h5 class="mb-3">Forgot your password?</h5>
 
-<%= form_with url: passwords_path do |form| %>
-  <%= form.email_field :email_address, required: true, autofocus: true, autocomplete: "username", placeholder: "Enter your email address", value: params[:email_address] %><br>
-  <%= form.submit "Email reset instructions" %>
-<% end %>
+    <%= tag.div(flash[:alert], style: "color:red") if flash[:alert] %>
+
+    <%= form_with url: passwords_path do |form| %>
+      <div class="my-2">
+        <%= form.label :email_address %>
+        <%= form.email_field :email_address, required: true, autofocus: true, autocomplete: "username", placeholder: "Enter your email address", value: params[:email_address], class: "form-control" %>
+      </div>
+
+      <div class="my-2">
+        <%= form.submit "Email reset instructions", class: "btn btn-primary" %>
+      </div>
+    <% end %>
+  </div>
+</section>
