Allowed admin to view settings.

--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -2,9 +2,9 @@
 
 <section class="px-3 py-5 p-md-5">
   <div class="container single-col-max-width">
-    <h5 class="mb-3">Categories</h5>
+    <h5>Categories</h5>
 
-    <table class="table table-striped my-5">
+    <table class="table table-striped my-4">
       <thead>
         <tr>
           <th>#</th>
