--- a/app/views/admin/settings/index.html.erb
+++ b/app/views/admin/settings/index.html.erb
@@ -2,6 +2,8 @@
 
 <section class="px-3 py-5 p-md-5">
   <div class="container single-col-max-width">
+    <%= tag.div(flash[:notice], class: "text-success mb-3") if flash[:notice] %>
+
     <h5>Settings</h5>
 
     <table class="table table-striped my-4">
@@ -10,6 +12,7 @@
           <th>#</th>
           <th>Key</th>
           <th>Value</th>
+          <th></th>
         </tr>
       </thead>
 
@@ -19,6 +22,7 @@
           <th><%= setting.id %></th>
           <td><%= setting.key %></td>
           <td><%= setting.value %></td>
+          <td><a class="text-link" href="<%= edit_admin_setting_path(setting) %>">Edit</a></td>
         </tr>
       <% end %>
       </tbody>
