Bug-fix: For authenticated user, allowed them to view non-published categories' posts.

--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -31,7 +31,7 @@
     <%= form.text_area :content, cols: 80, rows: 30 %>
   </div>
 
-  <div class="my-2">
+  <div class="mt-4">
     <%= form.submit nil, class: "btn btn-primary" %>
   </div>
 <% end %>
