--- a/app/views/admin/posts/edit.html.erb
+++ b/app/views/admin/posts/edit.html.erb
@@ -10,7 +10,7 @@
 
     <%= render "form", post: @post %>
 
-    <div>
+    <div class="mt-4">
       <%= link_to "Show this post", @post.path, target: "_blank" %>
     </div>
   </div>
