--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,6 +50,7 @@
   </body>
 
   <%= javascript_include_tag 'src/fontawesome/js/all.min', defer: 'defer' %>
-  <%= javascript_include_tag 'src/popper.min.js' %>
-  <%= javascript_include_tag 'src/bootstrap.min.js' %>
+  <%= javascript_include_tag 'src/popper.min' %>
+  <%= javascript_include_tag 'src/bootstrap.min' %>
+  <%= javascript_include_tag 'src/initialize_bootstrap' %>
 </html>
