Automatically added a stroll on the left sider bar.

--- a/app/views/shared/_left_sidebar.html.erb
+++ b/app/views/shared/_left_sidebar.html.erb
@@ -1,4 +1,4 @@
-<header class="header text-center">
+<header class="header text-center overflow-auto">
   <h1 class="blog-name pt-lg-4 mb-0" id="blog-name">
     <a class="no-text-decoration" href="<%= root_path %>"><%= t(:blog_name) %></a>
   </h1>
