--- a/app/views/admin/main/root.html.erb
+++ b/app/views/admin/main/root.html.erb
@@ -4,7 +4,7 @@
       Welcome, administrator <%= Current.session.user.email_address %>!
     </p>
 
-    <%= link_to "Settings", admin_settings_path %>
+    <%= link_to "Social media accounts", admin_social_media_accounts_path %>
     <br>
     <br>
     <%= link_to "Categories", admin_categories_path %>
