--- a/app/views/shared/_left_sidebar.html.erb
+++ b/app/views/shared/_left_sidebar.html.erb
@@ -18,7 +18,7 @@
         </div>
 
         <ul class="social-list list-inline py-3 mx-auto">
-          <% Setting.where.not(value: nil).each_with_index do |setting, i| %>
+          <% SocialMediaAccount.where.not(value: nil).each_with_index do |setting, i| %>
             <li class="list-inline-item <%= i >= 5 && i % 5 == 0 ? 'mt-2' : nil %>">
               <% if setting.compatible_target_url.present? %>
                 <a href="<%= setting.compatible_target_url %>" target="_blank"><i class="<%= setting.icon_name %>"></i></a>
