--- a/app/views/admin/main/root.html.erb
+++ b/app/views/admin/main/root.html.erb
@@ -3,8 +3,10 @@
     <p>
       Welcome, administrator <%= Current.session.user.email_address %>!
     </p>
-
     <%= link_to "Social media accounts", admin_social_media_accounts_path %>
+    <br>
+    <br>
+    <%= link_to "GitHub App settings", admin_github_app_settings_path %>
     <br>
     <br>
     <%= link_to "Categories", admin_categories_path %>
