--- a/app/views/admin/github_app_settings/index.html.erb
+++ b/app/views/admin/github_app_settings/index.html.erb
@@ -21,7 +21,7 @@
         <tr>
           <th><%= setting.id %></th>
           <td><%= setting.key %></td>
-          <td><% if setting.key == "private_key" && setting.value.present? %>*** <%= setting.value.size %> characters ***<% else %><%= setting.value %><% end %></td>
+          <td><%= setting.value %></td>
           <td><a class="text-link" href="<%= edit_admin_github_app_setting_path(setting) %>">Edit</a></td>
         </tr>
       <% end %>
