Allowed admin to maintain `Settings` table (firstly, they can set `github_uername` in this table).

--- a/app/views/admin/main/root.html.erb
+++ b/app/views/admin/main/root.html.erb
@@ -6,6 +6,9 @@
     <%= link_to "Social media accounts", admin_social_media_accounts_path %>
     <br>
     <br>
+    <%= link_to "Settings", admin_settings_path %>
+    <br>
+    <br>
     <%= link_to "GitHub App settings", admin_github_app_settings_path %>
     <br>
     <br>
