Table posts: Removed `key`; `id` change to String type; Renamed `created_at` to `updated_at`; Updated`content` to be nullable; Changed pages accordingly.

--- a/app/views/admin/github_app_settings/edit.html.erb
+++ b/app/views/admin/github_app_settings/edit.html.erb
@@ -30,7 +30,7 @@
         <%= form.label :value, class: "d-block #{@github_app_setting.key == 'public_link' ? nil : 'required' }" %>
         <%= form.text_field :value, class: "form-control" %>
         <% if @github_app_setting.key == "public_link" %>
-          <span>For display only, not for logic.</span>
+          <span>For display only, not for logic. The URL format is like https://github.com/apps/yourappname</span>
         <% end %>
       </div>
 
