--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -12,6 +12,11 @@
   <% end %>
 
   <div class="my-2">
+    <%= form.label :id %>
+    <%= form.text_field :id, class: "form-control", placeholder: "When empty, the system will automatically generate a value" %>
+  </div>
+
+  <div class="my-2">
     <%= form.label :permalink %>
     <%= form.text_field :permalink, class: "form-control", placeholder: "If it is empty or \"/\", it will be automatically generated according to the Title" %>
   </div>
@@ -28,7 +33,7 @@
 
   <div class="my-2">
     <%= form.label :content, class: "d-block required" %>
-    <%= form.text_area :content, cols: 80, rows: 30 %>
+    <%= form.text_area :content, cols: 90, rows: 30 %>
   </div>
 
   <div class="mt-4">
