--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -24,7 +24,7 @@
           <div class="col">
             <h3 class="title mb-1"><a class="text-link" href="<%= post.path %>"><%= post.title %></a></h3>
             <div class="meta mb-1">
-              <span class="date"><%= t(:posted_at) %> <%= time_ago_in_words(post.created_at) %></span>
+              <span class="date"><%= t(:posted_at) %> <%= time_ago_in_words(post.published_at) %></span>
               <span class="time"><%= post.content.size / 200 %> min read</span>
               <span class="comment">
                 <a class="text-link" href="#">8 comments</a>
