--- a/app/views/posts/about.html.erb
+++ b/app/views/posts/about.html.erb
@@ -5,7 +5,7 @@
     <header class="blog-post-header">
       <h2 class="title mb-2"><%= @post.title %></h2>
       <div class="meta mb-3">
-        <span class="date"><%= t(:posted_at) %> <%= time_ago_in_words(@post.created_at) %></span>
+        <span class="date"><%= t(:posted_at) %> <%= time_ago_in_words(@post.published_at) %></span>
         <span class="time"><%= @post.content.size / 200 %> min read</span>
       </div>
     </header>
