--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,7 +6,7 @@
       <h2 class="title mb-2"><%= @post.title %></h2>
       <div class="meta mb-3">
         <span><%= t(:author) %>: <%= t(:author_name) %></span>
-        <span class="date"><%= t(:posted_at) %> <%= time_ago_in_words(@post.created_at) %></span>
+        <span class="date"><%= t(:posted_at) %> <%= time_ago_in_words(@post.published_at) %></span>
         <span class="time"><%= @post.content.size / 200 %> min read</span>
         <span class="comment"><a class="text-link" href="#">4 comments</a></span>
         <% if authenticated? %>
