--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -26,13 +26,18 @@
     <%= form.text_field :title, class: "form-control" %>
   </div>
 
+  <div>
+    <%= form.label :published_at, class: "d-block required" %>
+    <%= form.text_field :published_at, size: 30 %>
+  </div>
+
   <div class="my-2">
     <%= form.label :category_id, class: "d-block required" %>
     <%= form.select :category_id, options_for_select(@category_options, post.category_id) %>
   </div>
 
   <div class="my-2">
-    <%= form.label :content, class: "d-block required" %>
+    <%= form.label :content, class: "d-block" %>
     <%= form.text_area :content, cols: 90, rows: 30 %>
   </div>
 
