--- a/app/views/admin/posts/new.html.erb
+++ b/app/views/admin/posts/new.html.erb
@@ -48,6 +48,11 @@
       </div>
 
       <div class="my-2">
+        <%= form.label :thumbnail %>
+        <%= form.text_field :thumbnail, class: "form-control" %>
+      </div>
+
+      <div class="my-2">
         <%= form.submit nil, class: "btn btn-primary" %>
       </div>
     <% end %>
