--- a/app/views/admin/main/root.html.erb
+++ b/app/views/admin/main/root.html.erb
@@ -14,16 +14,16 @@
     <br>
     <%= link_to "Categories", admin_categories_path %>
 
-    <div class="mt-3">
-      <%= link_to @category_drafts.name, @category_drafts.path, target: "_blank" %>&nbsp;&nbsp;
-      <%= link_to @category_published.name, @category_published.path, target: "_blank" %>
-    </div>
 
     <div class="mt-3">
       <a href="<%= new_admin_post_path %>">
         <button type="button" class="btn btn-primary">Create a Post</button>
       </a>
     </div>
+<!--    <div class="mt-3">-->
+<!--      <%#= link_to @category_drafts.name, @category_drafts.path, target: "_blank" %>&nbsp;&nbsp;-->
+      <%#= link_to @category_published.name, @category_published.path, target: "_blank" %>
+<!--    </div>-->
 
     <%= button_to "Log out", session_path, method: :delete, class: "btn btn-primary my-2" if authenticated? %>
   </div>
