--- a/app/views/admin/main/root.html.erb
+++ b/app/views/admin/main/root.html.erb
@@ -1,11 +1,11 @@
 <section class="px-3 py-5 p-md-5">
   <div class="container single-col-max-width">
     <p>
-      Welcome, administrator <%= Current.session.user.email_address %>!
+      <%= t(:welcome_admin, email: Current.session.user.email_address) %>
     </p>
     <div class="mt-3">
       <a href="<%= new_admin_post_path %>">
-        <button type="button" class="btn btn-primary">Create a Post</button>
+        <button type="button" class="btn btn-primary"><%= t(:create_a_post) %></button>
       </a>
     </div>
     <br>
@@ -27,6 +27,6 @@
       <%#= link_to @category_published.name, @category_published.path, target: "_blank" %>
 <!--    </div>-->
 
-    <%= button_to "Log out", session_path, method: :delete, class: "btn btn-primary my-2" if authenticated? %>
+    <%= button_to t(:log_out), session_path, method: :delete, class: "btn btn-primary my-2" if authenticated? %>
   </div>
 </section>
