--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -25,10 +25,10 @@
             <h3 class="title mb-1"><a class="text-link" href="<%= post.path %>"><%= post.title %></a></h3>
             <div class="meta mb-1">
               <span class="date"><%= t(:posted_at) %> <%= time_ago_in_words(post.published_at) %></span>
-              <span class="time"><%= post.content.size / 200 %> min read</span>
-              <span class="comment">
-                <a class="text-link" href="#">8 comments</a>
-              </span>
+              <span class="time"><%= post.content.size / 200 %> <%= t(:min_read) %></span>
+<!--              <span class="comment">-->
+<!--                <a class="text-link" href="#">8 comments</a>-->
+<!--              </span>-->
 
               <span>
                 <a class="text-link" href="<%= post.category.path %>"><%= post.category.name.titleize %></a>
@@ -41,14 +41,14 @@
               <% end %>
             </div>
             <div class="intro"><%= post.content[..250] %>...</div>
-            <a class="text-link" href="<%= post.path %>">Read more &rarr;</a>
+            <a class="text-link" href="<%= post.path %>"><%= t(:read_more) %> &rarr;</a>
           </div>
         </div>
       </div>
     <% end %>
 
     <nav class="blog-nav nav nav-justified my-5">
-      <a class="nav-link-next nav-item nav-link rounded" href="<%= about_path %>">Next<i class="arrow-next fas fa-long-arrow-alt-right"></i></a>
+      <a class="nav-link-next nav-item nav-link rounded" href="<%= about_path %>"><%= t(:next_page) %><i class="arrow-next fas fa-long-arrow-alt-right"></i></a>
     </nav>
   </div>
 </section>
