--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,8 +7,8 @@
       <div class="meta mb-3">
         <span><%= t(:author) %>: <%= t(:author_name) %></span>
         <span class="date"><%= t(:posted_at) %> <%= time_ago_in_words(@post.published_at) %></span>
-        <span class="time"><%= @post.content.size / 200 %> min read</span>
-        <span class="comment"><a class="text-link" href="#">4 comments</a></span>
+        <span class="time"><%= @post.content.size / 200 %> <%= t(:min_read) %></span>
+<!--        <span class="comment"><a class="text-link" href="#">8 comments</a></span>-->
         <% if authenticated? %>
           <% if [ Category::ID_DRAFTS, Category::ID_PUBLISHED ].include?(@post.category_id) %>
             <span>
@@ -27,12 +27,12 @@
     <nav class="blog-nav nav nav-justified my-5">
       <% if @post_newer.present? %>
         <a class="nav-link-prev nav-item nav-link rounded-left" href="<%= @post_newer.path %>">
-          Newer Post<i class="arrow-prev fas fa-long-arrow-alt-left"></i>
+          <%= t(:newer_post) %><i class="arrow-prev fas fa-long-arrow-alt-left"></i>
         </a>
       <% end %>
       <% if @post_older.present? %>
         <a class="nav-link-next nav-item nav-link rounded-right" href="<%= @post_older.path %>">
-          Older Post<i class="arrow-next fas fa-long-arrow-alt-right"></i>
+          <%= t(:older_post) %><i class="arrow-next fas fa-long-arrow-alt-right"></i>
         </a>
       <% end %>
     </nav>
