--- a/app/views/shared/_left_sidebar.html.erb
+++ b/app/views/shared/_left_sidebar.html.erb
@@ -10,7 +10,7 @@
 
     <div id="navigation" class="collapse navbar-collapse flex-column" >
       <div class="profile-section pt-3 pt-lg-0">
-        <%= image_tag "profile.png", class: "profile-image mb-3 rounded-circle mx-auto" %>
+        <%= image_tag "profile.jpg", class: "profile-image mb-3 rounded-circle mx-auto" %>
 
         <div class="bio mb-3">
           <%= t(:brief_personal_introduction) %><br>
