Renamed `rails-markdown-blog` to `markdown-resume-blog`.

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer class="footer text-center py-2 theme-bg-dark">
-  <small class="copyright">Powered by <a href="https://github.com/RubyMarkdownBlog/rails-markdown-blog" target="_blank">Markdown Blog</a></small>,
+  <small class="copyright">Powered by <a href="https://github.com/resumeblog/markdown-resume-blog" target="_blank">Markdown Resume Blog</a></small>,
   <!--/* This template is free as long as you keep the footer attribution link. If you'd like to use the template without the attribution link, you can buy the commercial license via our website: themes.3rdwavemedia.com Thank you for your support. :) */-->
   <small class="copyright">UI by <a href="https://themes.3rdwavemedia.com" target="_blank">Xiaoying</a></small>
 </footer>
