Added `gem "mission_control-jobs"` and setup it.

--- a/app/views/admin/main/root.html.erb
+++ b/app/views/admin/main/root.html.erb
@@ -21,6 +21,9 @@
     <%= link_to "GitHub App settings", admin_github_app_settings_path %>
     <br>
     <br>
+    <%= link_to "Jobs", jobs_path, "data-turbo": false, target: "_blank" %>
+    <br>
+    <br>
     <details>
       <summary><%= t(:change_profile_avatar) %></summary>
       The avatar file is in <b>/path/to/markdown-resume-blog/app/assets/images/profile.jpg</b>.
