--- a/app/views/admin/main/root.html.erb
+++ b/app/views/admin/main/root.html.erb
@@ -15,6 +15,9 @@
     <%= link_to "Social media accounts", admin_social_media_accounts_path %>
     <br>
     <br>
+    <%= link_to "Email Subscribers", admin_email_subscribers_path %>
+    <br>
+    <br>
     <%= link_to "Settings", admin_settings_path %>
     <br>
     <br>
