Reworded in webpages :about and :hire.

--- a/app/views/admin/github_app_settings/edit.html.erb
+++ b/app/views/admin/github_app_settings/edit.html.erb
@@ -31,6 +31,8 @@
         <%= form.text_field :value, class: "form-control" %>
         <% if @github_app_setting.key == "public_link" %>
           <span>For display only, not for logic. The URL format is like https://github.com/apps/yourappname</span>
+          <br>
+          <span>You don't have to fill it in.</span>
         <% end %>
       </div>
 
