--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -39,7 +39,7 @@
                 </span>
               <% end %>
             </div>
-            <div class="intro"><%= post.content[..250] %>...</div>
+            <div class="intro"><%= first_few_sentences(content) %>...</div>
             <a class="text-link" href="<%= post.path %>"><%= t(:read_more) %> &rarr;</a>
           </div>
         </div>
