--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,10 +1,9 @@
 <% content_for :title, "Posts" %>
 
-<% if notice.present? %>
-  <p style="color: green"><%= notice %></p>
-<% end %>
-
 <section class="theme-bg-light py-5">
+  <%= tag.div(flash[:notice], class: "text-center text-success mb-2") if flash[:notice] %>
+  <%= tag.div(flash[:alert], class: "text-center text-danger mb-2") if flash[:alert] %>
+
   <div class="container text-center single-col-max-width">
     <h2 class="heading"><%= t(:headline) %></h2>
 
@@ -25,7 +24,7 @@
             <h3 class="title mb-1"><a class="text-link" href="<%= post.path %>"><%= post.title %></a></h3>
             <div class="meta mb-1">
               <span class="date"><%= t(:posted_at) %> <%= time_ago_in_words(post.published_at) %></span>
-              <span class="time"><%= post.content.size / 200 %> <%= t(:min_read) %></span>
+              <span class="time"><%= (post.content || "").size / 200 %> <%= t(:min_read) %></span>
 <!--              <span class="comment">-->
 <!--                <a class="text-link" href="#">8 comments</a>-->
 <!--              </span>-->
@@ -40,7 +39,7 @@
                 </span>
               <% end %>
             </div>
-            <div class="intro"><%= first_few_sentences(content) %>...</div>
+            <div class="intro"><%= first_few_sentences(post.content) %>...</div>
             <a class="text-link" href="<%= post.path %>"><%= t(:read_more) %> &rarr;</a>
           </div>
         </div>
