--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,13 +1,15 @@
 <% title(@post.title) %>
 
 <article class="blog-post px-3 py-5 p-md-5">
+  <%= tag.div(flash[:notice], class: "text-center text-success mb-2") if flash[:notice] %>
+
   <div class="container single-col-max-width">
     <header class="blog-post-header">
       <h2 class="title mb-2"><%= @post.title %></h2>
       <div class="meta mb-3">
         <span><%= t(:author) %>: <%= t(:author_name) %></span>
         <span class="date"><%= t(:posted_at) %> <%= time_ago_in_words(@post.published_at) %></span>
-        <span class="time"><%= @post.content.size / 200 %> <%= t(:min_read) %></span>
+        <span class="time"><%= (@post.content || "").size / 200 %> <%= t(:min_read) %></span>
 <!--        <span class="comment"><a class="text-link" href="#">8 comments</a></span>-->
         <% if authenticated? %>
           <% if [ Category::ID_DRAFTS, Category::ID_PUBLISHED ].include?(@post.category_id) %>
