Allowed admin to manage subdomains.

--- a/app/views/admin/main/root.html.erb
+++ b/app/views/admin/main/root.html.erb
@@ -24,6 +24,9 @@
     <%= link_to "Manage Locales", admin_locales_path %>
     <br>
     <br>
+    <%= link_to "Manage Subdomains", admin_subdomains_path %>
+    <br>
+    <br>
     <%= link_to "Settings", admin_settings_path %>
     <br>
     <br>
