When editing a post on the page, made it required.

--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="my-2">
     <%= form.label :id %>
-    <%= form.text_field :id2, id: "post_id", class: "form-control", placeholder: "When empty, the system will automatically generate a value" %>
+    <%= form.text_field :id2, id: "post_id", class: "form-control", required: true %>
   </div>
 
   <div class="my-2">
