Renamed the Vietnamese name in `seeds.rb`.

--- a/app/views/admin/locales/index.html.erb
+++ b/app/views/admin/locales/index.html.erb
@@ -6,7 +6,7 @@
     <%= tag.div(flash[:alert], class: "text-danger mb-3") if flash[:alert] %>
 
     <div class="d-flex justify-content-between align-items-center mb-4">
-      <h5>Available Locales</h5>
+      <h5>Locales</h5>
       <a href="<%= new_admin_locale_path %>">
         <button type="button" class="btn btn-primary btn-sm">Add New Locale</button>
       </a>
